#401 and TGDP tagging